--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "MIT",
   "author": "Doug Fenstermacher",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/bundle/index.umd.min.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "unpkg": "./dist/bundle/index.umd.min.js",
+  "jsdelivr": "./dist/bundle/index.umd.min.js",
+  "browser": "./dist/bundle/index.umd.min.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -31,11 +34,19 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npm run build:all",
-    "build:all": "npm run build:esm",
+    "build:all": "npm run build:unbundled && npm run build:bundle",
+    "build:unbundled": "npm run build:esm",
     "build:esm": "tsc -p tsconfig.esm.json",
+    "build:bundle": "rollup -c rollup.config.mjs",
     "prepare": "npm run build"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "rollup": "^4.25.0",
+    "rollup-plugin-dts": "^6.1.1",
+    "tslib": "^2.8.1",
     "typescript": "^5.9.2"
   }
 }
